--- a/css/Fondo.css
+++ b/css/Fondo.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
     padding: 0;
-    background: url(../imag/futbol.jpg) center top;
+    background: url(../imag/Logo/Logo\ Sport\ App.PNG) center top;
     background-size: cover;
 }
