--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,10 +2,32 @@
     max-width: 300px;
     position: relative;
     left: 50px;
+    
 }
 a{
-    font-size: 15px ;
+    font-size: 14px ;
+    color: black;
+    
 }
 p{
-    font-size: 15px;
+    font-size: 15px ;
+    color: black;
+    
+
+}
+audio {
+    position: relative;
+    left: 500px;
+    visibility: collapse;
+}
+body {
+    margin: 0;
+    padding: 0;
+    background: url(../imag/Fondos/futbol.jpg) center top;
+    background-size: cover;
+}
+.tile {
+    position: relative;
+    left: 1px;
+    max-width:1590px;
 }
