--- a/css/estilo.css
+++ b/css/estilo.css
@@ -22,13 +22,7 @@ body {
     background-size: cover;
 }
 
-@media screen and (min-width: 1280px) {
-    .column{
-      margin-left: 50px;
-      margin-right: 9px;
-    }
-}
-@media screen and (min-width: 1280px) {
+@media only screen and (min-width: 1280px) {
     .tile{
       margin-left: 10px;
       margin-right: 10px;
@@ -41,17 +35,18 @@ body {
         display: block;
         margin: auto;
     }
-    .table-container{
-        display: block;
-        margin: auto;
-        margin-left: 240px;
-       
-    } 
+    .box1{
+        width:300px; 
+        height:290px;
+        margin-top: -310px;
+        
+        margin-left: 500px;
+        background-color : #b3d4fc;
+    }
+    .column{
+        margin-left: 50px;
+        margin-right: 9px;
+      }
+    
 }
-.box1{
-    width:300px; 
-    height:300px;
-    margin-top: -265px;
-    margin-left: 700px;
-    background-color : #b3d4fc;
-}
+
