--- a/css/estilo.css
+++ b/css/estilo.css
@@ -36,7 +36,7 @@ body {
         margin: auto;
     }
     .box1{
-        width:300px; 
+        width:200px; 
         height:290px;
         margin-top: -310px;
         
@@ -46,7 +46,15 @@ body {
     .column{
         margin-left: 50px;
         margin-right: 9px;
-      }
+    }
+    .box2{
+        width:200px; 
+        height:290px;
+        margin-top: -291px;
+        margin-left: 300px;
+        background-color : #b3d4fc;
+    }
+
     
 }
 
