--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,20 +1,22 @@
-
-a{
-    font-size: 14px ;
+a {
+    font-size: 14px;
     color: black;
-    
-}
-p{
-    font-size: 15px ;
-    color: black;
-    
 
 }
-audio{
+
+p {
+    font-size: 15px;
+    color: black;
+
+
+}
+
+audio {
     position: relative;
     left: 500px;
     visibility: collapse;
 }
+
 body {
     margin: 0;
     padding: 0;
@@ -23,43 +25,51 @@ body {
 }
 
 @media only screen and (min-width: 1280px) {
-    .tile{
-      margin-left: 10px;
-      margin-right: 10px;
-      margin-top: 10px;
-      
+    .tile {
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 10px;
+
     }
-    .image{
+
+    .image {
         max-width: 450px;
         max-height: 450px;
         display: block;
         margin: auto;
     }
-    .column{
+
+    .column {
         margin-left: 10px;
         margin-right: -15px;
     }
-    .box1{
-        width:200px; 
-        height:290px;
+
+    .box1 {
+        width: 200px;
+        height: 290px;
         margin-top: -290px;
         margin-left: 450px;
     }
-    .box2{
-        width:200px; 
-        height:290px;
+
+    .box2 {
+        width: 200px;
+        height: 290px;
         margin-top: -290px;
         margin-left: 650px;
     }
-    .box3{
-        width:200px; 
-        height:290px;
+
+    .box3 {
+        width: 200px;
+        height: 290px;
         margin-top: -290px;
         margin-left: 850px;
     }
-  
-    
-    
+
+
+
 }
 
-    
+header {
+    top: 0px;
+    position: sticky;
+}
