--- a/css/fondo.css
+++ b/css/fondo.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
     padding: 0;
-    background: url(../imag/Fondos/futbol.jpg) center top;
+    background: url(../imag/Logo/LogoSportApp.PNG) center top;
     background-size: cover;
 }
